--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,14 +30,22 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  lottie: 3.2.0
   provider: ^6.0.5
-  http: ^1.1.0
-  shared_preferences: ^2.2.0
-  socket_io_client: ^2.0.0
-  intl: ^0.17.0
-  sqflite: ^2.3.0  
-  path: ^1.8.3     
+
+  # Network
+  http: ^0.13.5
+  socket_io_client: ^2.0.1
+
+  # Local storage
+  shared_preferences: ^2.0.18
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  path_provider: ^2.1.0
+
+  # Utils
+  intl: ^0.18.0
+  uuid: ^3.0.7
+  
   
 
 
@@ -56,6 +64,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  hive_generator: ^2.0.0
+  build_runner: ^2.3.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
