--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,12 +45,20 @@ dependencies:
   # Utils
   intl: ^0.18.0
   uuid: ^3.0.7
-  image_picker: ^0.8.7  # Added image picker package
-  lottie: ^2.7.0  # Added for animations
+  image_picker: ^0.8.7  
+  lottie: ^2.7.0  
+  flutter_webrtc: 0.13.1+hotfix.1
+  permission_handler: ^12.0.0+1
+  permission_handler_android: ^13.0.1
+  permission_handler_apple: ^9.4.7
+  permission_handler_windows: ^0.2.1
+  permission_handler_platform_interface: ^4.3.0
+
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  wakelock_plus: ^1.2.11
 
 dev_dependencies:
   flutter_test:
@@ -70,21 +78,21 @@ dev_dependencies:
 flutter_launcher_icons:
   android: true
   ios: true
-  image_path: "assets/icon.png"
+  image_path: "assets/TQCHAT.png"
   min_sdk_android: 21
   remove_alpha_ios: false
   web:
     generate: true
-    image_path: "assets/icon.png"
+    image_path: "assets/TQCHAT.png"
     background_color: "#2A64F6"
     theme_color: "#2A64F6"
   windows:
     generate: true
-    image_path: "assets/icon.png"
+    image_path: "assets/TQCHAT.png"
     icon_size: 48
   macos:
     generate: true
-    image_path: "assets/icon.png"
+    image_path: "assets/TQCHAT.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
